# lambdacalc

./: LICENSE  README.md  div.lc  lambda-calc.cabal  map.lc
app/: Main.hs
src/Language/: LambdaCalculus.hs
