name:                lambda-calc
version:             0.1.0.0
synopsis:            A simple λ-calculus interpreter
description:         A simple λ-calculus interpreter that does reduction in normal order
homepage:            https://github.com/ludvikgalois/lambda-calc#readme
license:             BSD3
license-file:        LICENSE
author:              Robert Offner
maintainer:          ludvikgalois@gmail.com
copyright:           2017 Robert Offner
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Language.LambdaCalculus
  build-depends:       base >= 4.7 && < 5, bound >= 2, parsec >= 3, deriving-compat >= 0.3
  default-language:    Haskell2010

executable lci
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , lambda-calc
                     , options >= 1.2
  default-language:    Haskell2010

test-suite lambda-calc-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , lambda-calc
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/ludvikgalois/lambda-calc
